Enable native access for flatlaf.